Added a scene with a 'console' with a small screen with texture

--- a/configuration.json
+++ b/configuration.json
@@ -59,6 +59,11 @@
             "type": "texture",
             "name": "ttDiskTexture",
             "file": "assets\\textures\\ttdisk.png"
+        },
+        {
+            "type": "texture",
+            "name": "bootTexture",
+            "file": "assets\\textures\\boot.png"
         }
     ],
     "tracks": [
