--- a/configuration.json
+++ b/configuration.json
@@ -27,41 +27,6 @@
 	 "assets": [
         {
             "type": "texture",
-            "name": "texture01",
-            "file": "assets\\textures\\texture01.png"
-        },
-        {
-            "type": "texture",
-            "name": "texture01nm",
-            "file": "assets\\textures\\texture01nm.png"
-        },
-		{
-            "type": "texture",
-            "name": "texture02",
-            "file": "assets\\textures\\texture02.png"
-        },
-		{
-            "type": "texture",
-            "name": "texture02nm",
-            "file": "assets\\textures\\texture02nm.png"
-        },
-		{
-            "type": "texture",
-            "name": "texture03nm",
-            "file": "assets\\textures\\texture03nm.png"
-        },
-        {
-            "type": "texture",
-            "name": "labelTexture",
-            "file": "assets\\textures\\label.png"
-        },
-        {
-            "type": "texture",
-            "name": "ttDiskTexture",
-            "file": "assets\\textures\\ttdisk.png"
-        },
-        {
-            "type": "texture",
             "name": "bootTexture",
             "file": "assets\\textures\\boot.png"
         },
@@ -73,7 +38,22 @@
         {
             "type": "texture",
             "name": "ttMarkerDiskTexture",
-            "file": "assets\\textures\\labels\\otsikko tussi.png"
+            "file": "assets\\textures\\labels\\otsikko_tussi.png"
+        },
+        {
+            "type": "texture",
+            "name": "colhoTexture",
+            "file": "assets\\textures\\labels\\colho.png"
+        },
+        {
+            "type": "texture",
+            "name": "helgrimaTexture",
+            "file": "assets\\textures\\labels\\helgrima.png"
+        },
+        {
+            "type": "texture",
+            "name": "majaniemiTexture",
+            "file": "assets\\textures\\labels\\majaniemi.png"
         }
 
     ],
