--- a/configuration.json
+++ b/configuration.json
@@ -82,6 +82,13 @@
         {
             "type": "float1",
             "name": {
+                "track": "camera:fov",
+                "variable": "cameraFov"
+            }
+        },
+        {
+            "type": "float1",
+            "name": {
                 "track": "march:maxsteps",
                 "variable": "rayMaxSteps"
             }
